--- a/argocd/app-of-apps.yaml
+++ b/argocd/app-of-apps.yaml
@@ -20,7 +20,7 @@ metadata:
   # namespace: argocd or openshift-gitops
   name: rhdh-app-of-apps
 spec:
-  project: default
+  project: rhdh
   source:
     repoURL: 'https://github.com/christoph-jerolimov/rhdh-experiments.git'
     targetRevision: HEAD
