--- a/argocd/apps/rhdh-19.yaml
+++ b/argocd/apps/rhdh-19.yaml
@@ -11,7 +11,7 @@ metadata:
   # namespace: argocd or openshift-gitops
   name: rhdh-19
 spec:
-  project: default
+  project: rhdh
   source:
     repoURL: 'https://github.com/christoph-jerolimov/rhdh-experiments.git'
     targetRevision: HEAD
