--- a/argocd/apps/rhdh-next.yaml
+++ b/argocd/apps/rhdh-next.yaml
@@ -11,7 +11,7 @@ metadata:
   # namespace: argocd or openshift-gitops
   name: rhdh-next
 spec:
-  project: default
+  project: rhdh
   source:
     repoURL: 'https://github.com/christoph-jerolimov/rhdh-experiments.git'
     targetRevision: HEAD
