--- a/argocd/apps/rhdh-17.yaml
+++ b/argocd/apps/rhdh-17.yaml
@@ -13,9 +13,12 @@ metadata:
 spec:
   project: rhdh
   source:
-    repoURL: 'https://github.com/christoph-jerolimov/rhdh-experiments.git'
-    targetRevision: HEAD
-    path: argocd/rhdh-17
+    - chart: openshift-helm-charts/redhat-developer-hub
+      repoURL: https://charts.openshift.io/
+      targetRevision: 1.7
+    - repoURL: 'https://github.com/christoph-jerolimov/rhdh-experiments.git'
+      targetRevision: HEAD
+      path: argocd/rhdh-17
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: rhdh-17
