--- a/argocd/apps/rhdh-17.yaml
+++ b/argocd/apps/rhdh-17.yaml
@@ -12,15 +12,15 @@ metadata:
   name: rhdh-17
 spec:
   project: rhdh
-  source:
-    - chart: openshift-helm-charts/redhat-developer-hub
-      repoURL: https://charts.openshift.io/
-      targetRevision: 1.7
+  sources:
+    - chart: redhat-developer-hub
+      repoURL: https://charts.openshift.io
+      targetRevision: '1.7.1'
     - repoURL: 'https://github.com/christoph-jerolimov/rhdh-experiments.git'
       targetRevision: HEAD
       path: argocd/rhdh-17
   destination:
-    server: 'https://kubernetes.default.svc'
+    name: in-cluster
     namespace: rhdh-17
   syncPolicy:
     automated:
