--- a/argocd/apps/rhdh-18.yaml
+++ b/argocd/apps/rhdh-18.yaml
@@ -13,11 +13,14 @@ metadata:
 spec:
   project: rhdh
   source:
-    repoURL: 'https://github.com/christoph-jerolimov/rhdh-experiments.git'
-    targetRevision: HEAD
-    path: argocd/rhdh-18
+    chart: redhat-developer-hub
+    repoURL: https://charts.openshift.io
+    targetRevision: '1.8.0'
+    # helm:
+    #   valueFiles:
+    #   - values-production.yaml
   destination:
-    server: 'https://kubernetes.default.svc'
+    name: in-cluster
     namespace: rhdh-18
   syncPolicy:
     automated:
