--- a/argocd/apps/rhdh-18.yaml
+++ b/argocd/apps/rhdh-18.yaml
@@ -19,6 +19,9 @@ spec:
     helm:
       valueFiles:
       - values-production.yaml
+  helm:
+    valueFiles:
+    - values-production.yaml
   destination:
     name: in-cluster
     namespace: rhdh-18
