--- a/demos/next/values.yaml
+++ b/demos/next/values.yaml
@@ -1,4 +1,9 @@
 global:
+  catalogIndex:
+    image:
+      registry: quay.io
+      repository: rhdh/plugin-catalog-index
+      tag: "1.10"
   dynamic:
     plugins:
       - package: ./dynamic-plugins/dist/backstage-community-plugin-rbac
@@ -18,12 +23,6 @@ global:
       - package: ./dynamic-plugins/dist/backstage-community-plugin-topology
         disabled: false
       - package: ./dynamic-plugins/dist/backstage-community-plugin-acr
-        disabled: false
-      - package: ./dynamic-plugins/dist/backstage-community-plugin-jfrog-artifactory
-        disabled: false
-      - package: ./dynamic-plugins/dist/backstage-community-plugin-nexus-repository-manager
-        disabled: false
-      - package: ./dynamic-plugins/dist/backstage-community-plugin-quay
         disabled: false
 
 upstream:
